--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,25 @@
+# Node modules
+node_modules/
+
+# Environment variables
+.env
+
 # Logs
-logs
 *.log
+logs/
+
+# OS & Editor-specific files
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# Build files
+dist/
+build/
+
+# Debug & Dependencies
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-.env
-
-.firebase/
